--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  user: root
-  password: 123
+  username: <%= ENV.fetch("DATABASE_USERNAME") { "root" } %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") { "123" } %>
+  host: <%= ENV.fetch("DATABASE_HOST") { "localhost" } %>
+  port: <%= ENV.fetch("DATABASE_PORT") { 5432 } %>
   max_connections: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
 
 development:
   <<: *default
